A better submenu for financiamento after calculated

--- a/src/app/financiamento/extrato-financiamento/extrato-financiamento.component.html
+++ b/src/app/financiamento/extrato-financiamento/extrato-financiamento.component.html
@@ -1,7 +1,7 @@
 <div class="panel panel-default">
   <div class="panel-heading">
     <div class="row">
-      <div class="col-md-4">Extrato do Fundo de Garantia</div>
+      <div class="col-md-4">Extrato Fluxo de Caixa do Financiamento</div>
       <div class="col-md-6" style=" margin-top: -20px; position: absolute; display: inline-flex;">
         <gt-pagination [gtClasses]="'pagination pagination-sm justify-content-center'" [genericTable]="myTable" style="margin: 0px;"></gt-pagination>
       </div>
