--- a/src/app/financiamento/financiamento.component.html
+++ b/src/app/financiamento/financiamento.component.html
@@ -19,42 +19,56 @@
     </div>
     <div class="col-lg-10" *ngIf="calculado">
       <div class="panel panel-default">
-        <div class="panel-heading">
-            <div *ngIf="calculado">
-              <button id="configuracoes" class="btn btn-warning text-center" (click)="exibeGrafico()">Gráfico</button>
-              <button id="resultado" class="btn btn-warning text-center" (click)="exibeResultado()">Resultado</button>
-              <button id="fdc" class="btn btn-warning text-center" (click)="exibeFluxoDeCaixa()">Fluxo de Caixa</button>
-              <button id="fgts" class="btn btn-warning text-center" *ngIf="isUsingFgts" (click)="exibeExtrato()">Extrato FGTS</button>
-              <button id="save" class="btn btn-primary text-center" (click)="exibeSaveScreen()">Salvar</button>
+            <div *ngIf="calculado">              
+              <nav class="navbar navbar-default">
+                <div class="navi container-fluid">
+                    <div class="navbar-header">
+                      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                      </button>
+                      <a (click)="changeScreen('r')" [ngClass]="selected == 'r' ? 'active' : ''"class="navbar-brand">Resultado</a>
+                    </div>
+                  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                      <li><a (click)="changeScreen('g')" [ngClass]="selected == 'g' ? 'active' : ''">Gráficos</a></li>
+                      <li><a (click)="changeScreen('e')" [ngClass]="selected == 'e' ? 'active' : ''">Fluxo de Caixa</a></li>
+                      <li><a (click)="changeScreen('f')" [ngClass]="selected == 'f' ? 'active' : ''" *ngIf="isUsingFgts">Extrato Fgts</a></li>
+                      <li><a (click)="changeScreen('s')" [ngClass]="selected == 's' ? 'active' : ''">Salvar</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
             </div>
-        </div>        
         <div class="panel-body">
           <div class="row">           
-            <div *ngIf="grafico">
+            <div *ngIf="selected == 'g'">
               <div class="col-lg-12">
                   <grafico-financiamento [extrato]="extrato"></grafico-financiamento>
               </div>         
             </div>
-            <div *ngIf="fluxoDeCaixa">
+            <div *ngIf="selected == 'e'">
               <div class="col-lg-12">
                 <extrato-financiamento [naoUsaFgts]="isUsingFgts" [posterior]="posterior" [extrato]="extrato"></extrato-financiamento>
               </div>         
             </div>
-            <div *ngIf="resultado">
+            <div *ngIf="selected == 'r'">
               <div class="col-lg-6">
-                <resultado-parcial [extrato]="extrato" [user]="usuario" [fgtsConfig]="fgtsConfig"></resultado-parcial>
+                <resultado-parcial [extrato]="extrato" [user]="usuario" [fgtsConfig]="fgtsConfig" [checkExpandir]="true"></resultado-parcial>
               </div>
               <div class="col-lg-6">
                 <div>
                 </div>
               </div>
             </div>
-            <div *ngIf="fgts">
+            <div *ngIf="selected == 'f'">
               <div class="col-lg-12">
                 <extrato-fgts [extrato]="extrato"></extrato-fgts>
               </div>
             </div>
-            <div *ngIf="saveScreen">
+            <div *ngIf="selected == 's'">
               <div class="col-lg-12">
                 <financiamento-save [financiamento]='properties'></financiamento-save>
               </div>
