--- a/src/app/aluguel/aluguel-resultado/aluguel-resultado.component.html
+++ b/src/app/aluguel/aluguel-resultado/aluguel-resultado.component.html
@@ -1,15 +1,14 @@
-<!--Aluguel-->
 <div class="panel-heading text-center">Valor nominal do aluguel</div>    
 <div class="panel panel-default">
   <div class="panel-heading patri-main-1">
     <h4 class="panel-title">
-      <a data-toggle="collapse" href="#collapse1">Patrimônio: <span class="pull-right">R$ {{Total() | number:'1.2-2'}}</span></a>
+      <a data-toggle="collapse" href="#collapse1">Patrimônio <span class="glyphicon glyphicon-resize-vertical"></span><span class="pull-right">R$ {{Total() | number:'1.2-2'}}</span></a>
     </h4>
   </div>
   <div id="collapse1" class="panel-collapse collapse">
     <ul class="list-group">
       <a href="#patr-inv" class="list-group-item patri-main-2" data-toggle="collapse">
-        Investimento:<span class="pull-right">R$ {{InvestimentoTotal() | number:'1.2-2'}} </span>
+        Investimento <span class="glyphicon glyphicon-resize-vertical"></span><span class="pull-right">R$ {{InvestimentoTotal() | number:'1.2-2'}} </span>
       </a>
         <div class="list-group collapse" id="patr-inv">
           <div class="list-group-item patri-main-3">Inicial<span class="pull-right">R$ {{investimentoInicial | number:'1.2-2'}}</span></div>
@@ -17,7 +16,7 @@
           <div class="list-group-item patri-main-3">Rendimentos<span class="pull-right">R$ {{investimentoRendimentos | number:'1.2-2'}}</span></div>
         </div>
       <a *ngIf="fgtsRendimentos > 0" href="#patr-fgts" class="list-group-item patri-main-2" data-toggle="collapse">
-        Fgts:<span class="pull-right">R$ {{FgtsTotal() | number:'1.2-2'}} </span>
+        Fgts <span class="glyphicon glyphicon-resize-vertical"></span><span class="pull-right">R$ {{FgtsTotal() | number:'1.2-2'}} </span>
       </a>
         <div class="list-group collapse" id="patr-fgts">
           <div class="list-group-item patri-main-3">Inicial <span class="pull-right">R$ {{fgtsInicial | number:'1.2-2'}}</span></div>
@@ -31,20 +30,20 @@
 <div class="panel panel-default">
   <div class="panel-heading cust-main-1">
     <h4 class="panel-title">
-      <a data-toggle="collapse" href="#collapse2">Custo:<span class="pull-right">R$ {{Total() - fgtsRendimentos - investimentoRendimentos | number:'1.2-2'}}</span></a>
+      <a data-toggle="collapse" href="#collapse2">Custo <span class="glyphicon glyphicon-resize-vertical"></span><span class="pull-right">R$ {{Total() - fgtsRendimentos - investimentoRendimentos | number:'1.2-2'}}</span></a>
     </h4>
   </div>
   <div id="collapse2" class="panel-collapse collapse">
     <ul class="list-group">
       <a href="#cust-inv" class="list-group-item cust-main-2" data-toggle="collapse">
-        Investimento:<span class="pull-right">R$ {{ investimentoInicial + investimentoAportes | number:'1.2-2'}}</span>
+        Investimento <span class="glyphicon glyphicon-resize-vertical"></span><span class="pull-right">R$ {{ investimentoInicial + investimentoAportes | number:'1.2-2'}}</span>
       </a>
         <div class="list-group collapse" id="cust-inv">
           <div class="list-group-item cust-main-3">Inicial <span class="pull-right">R$ {{investimentoInicial | number:'1.2-2'}}</span></div>
           <div class="list-group-item cust-main-3">Aportes <span class="pull-right">R$ {{investimentoAportes | number:'1.2-2'}}</span></div>
         </div>
       <a *ngIf="fgtsRendimentos > 0" href="#cust-fgts" class="list-group-item cust-main-2" data-toggle="collapse">
-        Fgts:<span class="pull-right">R$ {{ fgtsInicial + fgtsAportes | number:'1.2-2'}}</span>
+        Fgts <span class="glyphicon glyphicon-resize-vertical"></span><span class="pull-right">R$ {{ fgtsInicial + fgtsAportes | number:'1.2-2'}}</span>
       </a>
         <div class="list-group collapse" id="cust-fgts">
           <div class="list-group-item cust-main-3">Inicial <span class="pull-right">R$ {{fgtsInicial | number:'1.2-2'}}</span></div>
