--- a/src/app/aluguel/aluguel.component.html
+++ b/src/app/aluguel/aluguel.component.html
@@ -4,33 +4,46 @@
   </div>  
   <div class="col-lg-9" *ngIf="calculado">
     <div class="panel panel-default">
-      <div class="panel-heading">
-          <div *ngIf="calculado">
-            <button id="grafico" class="btn btn-warning text-center" (click)="exibeGrafico()">Gráfico</button>
-            <button id="fdc" class="btn btn-warning text-center" (click)="exibeFluxoDeCaixa()">Fluxo de Caixa</button>
-            <button id="resultado" class="btn btn-warning text-center" (click)="exibeResultado()">Resultado</button>
+      <div *ngIf="calculado">            
+        <nav class="navbar navbar-default">
+          <div class="navi container-fluid">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+                <a (click)="changeScreen('r')" [ngClass]="selected == 'r' ? 'active' : ''"class="navbar-brand">Resultado</a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                <li><a (click)="changeScreen('g')" [ngClass]="selected == 'g' ? 'active' : ''">Gráficos</a></li>
+                <li><a (click)="changeScreen('e')" [ngClass]="selected == 'e' ? 'active' : ''">Fluxo de Caixa</a></li>
+              </ul>
+            </div>
           </div>
+        </nav>
       </div>        
-      <div class="panel-body">
-        <div class="row">            
-          <div class="col-lg-12" *ngIf="fluxoDeCaixa">
-            <app-extrato-aluguel [extratoAluguel]="extratoAluguel"></app-extrato-aluguel>
-          </div>
+    <div class="panel-body">
+      <div class="row">            
+        <div class="col-lg-12" *ngIf="selected == 'e'">
+          <app-extrato-aluguel [extratoAluguel]="extratoAluguel"></app-extrato-aluguel>
         </div>
-        <div class="row" *ngIf="grafico">            
-          <div class="col-lg-12">
-            <app-grafico-aluguel [extratoAluguel]="extratoAluguel"></app-grafico-aluguel>
-          </div>
-        </div>
-        <div class="row" *ngIf="resultado">            
-          <div class="col-lg-6">
-            <app-aluguel-resultado [extratoAluguel]="extratoAluguel"></app-aluguel-resultado>
-          </div>
-          <div class="col-lg-6">
-            <resultado-parcial [extrato]="comparador.ExtratoFinanciamento()" [extratoAluguel]="extratoAluguel" [user]="user" [fgtsConfig]="fgtsConfig"></resultado-parcial>
-          </div>
-        </div>    
       </div>
+      <div class="row" *ngIf="selected == 'g'">
+        <div class="col-lg-12">
+          <app-grafico-aluguel [extratoAluguel]="extratoAluguel" [extratoFinanciamento]="extratoFinanciamento" [user]="user"></app-grafico-aluguel>
+        </div>
+      </div>
+      <div class="row" *ngIf="selected == 'r'">
+        <div class="col-lg-6">
+          <app-aluguel-resultado [extratoAluguel]="extratoAluguel"></app-aluguel-resultado>
+        </div>
+        <div class="col-lg-6">
+          <resultado-parcial [extrato]="comparador.ExtratoFinanciamento()" [extratoAluguel]="extratoAluguel" [user]="user" [fgtsConfig]="fgtsConfig"></resultado-parcial>
+        </div>
+      </div>    
     </div>
   </div>
 </div>
