--- a/src/app/financiamento/financiamento-save/financiamento-save.component.html
+++ b/src/app/financiamento/financiamento-save/financiamento-save.component.html
@@ -7,7 +7,7 @@
     <label>Descrição</label>
     <textarea [disabled]="isAdicionado" class="form-control" [(ngModel)]="description" name="desc" rows="4">{{description}}</textarea>
   </div>
-  <div class="form-group">
+  <div class="form-group" *ngIf="authService.isLogged">
     <button [disabled]="isAdicionado || !isValid()" (click)="adicionar()"class="btn btn-primary">Salvar</button>
     <button [disabled]="isAdicionado" (click)="sugerir()" class="btn btn-primary">Sugerir</button>
   </div>
