--- a/src/app/global-configuration/global-configuration.component.html
+++ b/src/app/global-configuration/global-configuration.component.html
@@ -20,7 +20,7 @@
                 <label>Descrição</label>
                 <textarea [disabled]="isAdicionado" class="form-control" [(ngModel)]="Descricao" name="desc" rows="6">{{description}}</textarea>
               </div>
-              <div class="form-group">
+              <div class="form-group" *ngIf="authService.isLogged">
                 <button [disabled]="!isValid()" (click)="adicionar()"class="btn btn-primary">Salvar</button>
               </div>
             </form>
