--- a/src/app/aluguel/formulario-aluguel/formulario-aluguel.component.html
+++ b/src/app/aluguel/formulario-aluguel/formulario-aluguel.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="form-group">
       <label>Taxas</label>
-      <select name="configuration" class="form-control" [(ngModel)]="configurationSelecionado">
+      <select name="configuration" class="form-control" [(ngModel)]="selectedConfiguration.Configuration">
         <option *ngFor="let config of configurations" [ngValue]="config">{{config.Identificacao}}</option>
       </select>
     </div>
